Bug #9924 ABORT BACKUP 1 crashes 4 node cluster
Submitted: 15 Apr 2005 11:12 Modified: 25 Apr 2005 13:05
Reporter: Johan Andersson
Status: Closed
Category:Server: Cluster Severity:S2 (Serious)
Version:5.0.3 OS:Linux (linux 2.4.21-20 (64-bit))
Assigned to: Jonas Oreland Target Version:

[15 Apr 2005 11:12] Johan Andersson
Description:
START BACKUP on a db containing 1 table with 50M rows.
ABORT BACKUP then crashed the entire cluster.

How to repeat:
Have no time to try to repeat it now.
Insert 50M rows (112 byte each where 48 byte is the primary)
START BACKUP
after a while.
ABORT BACKUP

Suggested fix:
-
[15 Apr 2005 11:13] Johan Andersson
trace + error log

Attachment: backup-bug.tgz (application/octet-stream, text), 38.68 KiB.

[15 Apr 2005 12:05] Johan Andersson
backup-bug.tgz contains error log + trace for node 2
ndb_3_error.zip contains  error log + trace for node 3

Sorry for the different formats.

Anyway, both node 2 and node 3 died during an abort (entire node group down)...
[24 Apr 2005 20:36] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/internals/24263
[25 Apr 2005 8:44] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/internals/24269