bug#9924 - ndb backup abort handling   Redo abort handling according to descr. in Backup.txt bug#9960 - ndb backup       increase wait completed timeout to 48 hours